--- a/src/widgets/navbar/styles.module.scss
+++ b/src/widgets/navbar/styles.module.scss
@@ -1,63 +1,47 @@
 .container {
   background-color: rgb(var(--clr-bg-secondary));
   border-right: var(--border-secondary);
-  height: 100vh;
+  z-index: var(--z-index-navbar);
+  position: fixed;
 
   .content {
-    width: var(--w-navbar);
-    height: 100%;
+    width: fit-content;
+    height: 100vh;
+
+    &.expanded {
+      width: var(--w-navbar-expanded);
+    }
 
     .top {
-      text-align: center;
-      font-size: var(--sz-logo);
-      line-height: var(--lnh-md);
-      font-weight: var(--font-bold);
-      padding: 16px 0;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 12px;
       border-bottom: var(--border-secondary);
-      flex-shrink: 0;
+
+      .logo {
+        font-size: var(--sz-logo);
+        line-height: var(--lnh-md);
+        font-weight: var(--font-bold);
+      }
     }
 
     .main {
-      flex: 1;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      padding: 24px 12px;
+      height: 92%;
+      padding: 12px;
 
-      .mid {
-        .link {
-          .link_content {
-            display: flex;
-            align-items: center;
-            gap: 12px;
-            background-color: rgb(var(--clr-secondary));
-            color: rgb(var(--clr-type-black));
-            transition: var(--transition-default);
-            padding: 8px;
-            border-radius: var(--radius-md);
-            font-size: var(--sz-sm);
-            font-weight: var(--font-medium);
+      .li {
+        .btn {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+          gap: 12px;
 
-            &:hover {
-              background-color: rgb(var(--clr-secondary-hover));
-            }
-
-            &:active {
-              background-color: rgb(var(--clr-secondary-active));
-            }
-          }
-
-          &.active .link_content {
-            background-color: rgb(var(--clr-primary));
-            color: rgb(var(--clr-secondary));
-
-            &:hover {
-              background-color: rgb(var(--clr-primary-hover));
-            }
-
-            &:active {
-              background-color: rgb(var(--clr-primary-active));
-            }
+          &.logout {
+            color: red;
           }
         }
       }
