--- a/src/_pages/login/ui/page/styles.module.scss
+++ b/src/_pages/login/ui/page/styles.module.scss
@@ -9,7 +9,7 @@
     padding: 20px;
     background-color: rgb(var(--clr-secondary));
     border: var(--border-secondary);
-    border-radius: var(--radius-md);
+    border-radius: var(--r-md);
     display: flex;
     flex-direction: column;
     align-items: center;
