--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -3,25 +3,27 @@
   --clr-primary-hover: 51, 124, 245;
   --clr-primary-active: 29 112 248;
   --clr-secondary: 255, 255, 255;
-  --clr-secondary-hover: 250 250 250;
-  --clr-secondary-active: 245 245 245;
+  --clr-secondary-hover: 245 245 245;
+  --clr-secondary-active: 235 235 235;
   --clr-type-black: 17, 24, 39;
   --clr-type-gray: 107, 114, 128;
   --clr-bg-primary: 245, 245, 245;
   --clr-bg-secondary: 255, 255, 255;
+  --clr-bg-thead: 247, 248, 249;
   --clr-border-black: 107, 114, 128;
   --clr-border-white: 229, 231, 235;
 
-  --sz-xl: 30px;
-  --sz-lg: 24px;
-  --sz-logo: 20px;
-  --sz-md: 18px;
   --sz-sm: 14px;
+  --sz-md: 18px;
+  --sz-logo: 20px;
+  --sz-lg: 24px;
+  --sz-xl: 30px;
 
-  --lnh-xl: 36px;
-  --lnh-lg: 32px;
-  --lnh-md: 28px;
   --lnh-sm: 20px;
+  --lnh-md: 24px;
+  --lnh-description: 28px;
+  --lnh-lg: 32px;
+  --lnh-xl: 36px;
 
   --font-thin: 100;
   --font-extralight: 200;
@@ -33,19 +35,28 @@
   --font-extrabold: 800;
   --font-black: 900;
 
-  --transition-default: all .1s ease;
+  --transition-default: all .1s ease-in-out;
 
   --border-primary: solid 1px rgb(var(--clr-border-black));
   --border-secondary: solid 1px rgb(var(--clr-border-white));
 
-  --radius-sm: 4px;
-  --radius-md: 8px;
-  --radius-lg: 12px;
+  --r-sm: 4px;
+  --r-md: 8px;
+  --r-lg: 12px;
 
-  --padding-sm: 8px 12px;
-  --padding-md: 10px 16px;
-  --padding-lg: 12px 20px;
+  --p-sm: 8px 12px;
+  --p-md: 10px 16px;
+  --p-lg: 12px 20px;
+  --p-icon-sm: 8px;
+  --p-icon-md: 10px;
+  --p-icon-lg: 12px;
+  --p-top-main: 60px;
 
-  --w-navbar: 268px;
+  --w-navbar: 68px;
+  --w-navbar-expanded: 268px;
   --w-login-form: 400px;
+
+  --z-index-header: 1;
+  --z-index-navbar: 2;
+  --z-index-modal: 3;
 }
