--- a/src/shared/ui/input/styles.module.scss
+++ b/src/shared/ui/input/styles.module.scss
@@ -1,6 +1,6 @@
 .input {
   width: 100%;
-  padding: var(--padding-sm);
-  border-radius: var(--radius-sm);
+  padding: var(--p-sm);
+  border-radius: var(--r-sm);
   border: var(--border-secondary);
 }
