--- a/src/widgets/header/styles.module.scss
+++ b/src/widgets/header/styles.module.scss
@@ -1,12 +1,20 @@
 .container {
   background-color: rgb(var(--clr-bg-secondary));
-  width: 100%;
+  position: fixed;
+  width: calc(100% - var(--w-navbar));
+  top: 0;
+  right: 0;
+  z-index: var(--z-index-header);
+
+  &.expanded {
+    width: calc(100% - var(--w-navbar-expanded));
+  }
 
   .content {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 11px 12px;
+    padding: 15px 20px;
     border-bottom: var(--border-secondary);
 
     .buttons {
