feat: add update product modal, add history page

--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -7,11 +7,14 @@
   --clr-secondary-active: 235 235 235;
   --clr-type-black: 17, 24, 39;
   --clr-type-gray: 107, 114, 128;
-  --clr-bg-primary: 245, 245, 245;
+  --clr-type-red: 239, 68, 68;
+  --clr-bg-primary: 243, 244, 246;
   --clr-bg-secondary: 255, 255, 255;
   --clr-bg-thead: 247, 248, 249;
+  --clr-bg-modal: 0, 0, 0, 0.2;
   --clr-border-black: 107, 114, 128;
   --clr-border-white: 229, 231, 235;
+  --clr-scroll: 193, 193, 193;
 
   --sz-sm: 14px;
   --sz-md: 18px;
