--- a/src/shared/ui/input-search/styles.module.scss
+++ b/src/shared/ui/input-search/styles.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   gap: 4px;
   border: var(--border-secondary);
+  background-color: rgb(var(--clr-secondary));
   border-radius: var(--r-sm);
   font-size: var(--sz-md);
 
