--- a/src/widgets/header/styles.module.scss
+++ b/src/widgets/header/styles.module.scss
@@ -18,6 +18,7 @@
     border-bottom: var(--border-secondary);
 
     .buttons {
+      min-width: 300px;
       display: flex;
       align-items: center;
       gap: 16px;
