--- a/src/widgets/table/styles.module.scss
+++ b/src/widgets/table/styles.module.scss
@@ -1,65 +1,33 @@
 .content {
-  background-color: rgb(var(--clr-bg-secondary));
-  border: var(--border-secondary);
-  border-radius: var(--r-md);
-
   .top {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 8px;
+    padding: 0 8px;
+
+    p {
+      align-self: center;
+      font-size: var(--sz-lg);
+      font-weight: var(--font-semibold);
+    }
   }
 
-  .table {
+  .table_wrapper {
+    overflow: hidden;
+    border-radius: var(--r-md);
+    border: var(--border-secondary);
+    background-color: rgb(var(--clr-secondary));
+  }
+
+  .bottom {
     width: 100%;
+    padding: 0 8px;
+    display: flex;
+    align-items: center;
 
-    .thead {
-      background-color: rgb(var(--clr-bg-thead));
-      border-radius: var(--r-md);
-      color: rgb(var(--clr-type-gray));
-      font-size: var(--sz-md);
-      line-height: var(--lnh-md);
-      border-top: var(--border-secondary);
-      border-bottom: var(--border-secondary);
-
-      .th {
-        font-weight: var(--font-medium);
-        padding: 12px 0;
-      }
-    }
-
-    .tbody {
-      text-align: center;
-      font-size: var(--sz-md);
-      line-height: var(--lnh-md);
-
-
-
-      .tr {
-        cursor: pointer;
-        transition: var(--transition-default);
-        border-bottom: var(--border-secondary);
-
-        &:hover {
-          background-color: rgb(var(--clr-bg-primary));
-        }
-
-        &:last-child {
-          border-bottom: none;
-
-          .td:first-child {
-            border-radius: 0 0 0 var(--r-md);
-          }
-
-          .td:last-child {
-            border-radius: 0 0 var(--r-md) 0;
-          }
-        }
-
-        .td {
-          padding: 16px 0;
-        }
-      }
+    &:first-child {
+      align-self: flex-end;
+      justify-self: flex-end;
     }
   }
 }
