--- a/src/shared/ui/read-more-modal/styles.module.scss
+++ b/src/shared/ui/read-more-modal/styles.module.scss
@@ -2,52 +2,41 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: var(--z-index-modal);
-  background-color: rgba(var(--clr-bg-modal));
   width: 100%;
   height: 100%;
+  background-color: rgba(var(--clr-bg-modal));
+  z-index: var(--z-index-modal);
   display: flex;
   align-items: center;
   justify-content: center;
 
   .content {
     position: relative;
-    max-width: var(--w-modal);
-    background-color: rgb(var(--clr-bg-secondary));
-    padding: 20px;
-    border: var(--border-secondary);
-    border-radius: var(--r-md);
+    width: var(--w-modal);
     max-height: var(--h-max-modal);
     overflow-y: auto;
+    background-color: rgb(var(--clr-bg-secondary));
+    padding: 16px 20px;
+    border: var(--border-secondary);
+    border-radius: var(--r-md);
 
     .top {
       text-align: center;
       font-size: var(--sz-lg);
       line-height: var(--lnh-lg);
-      font-weight: var(--font-semibold);
+      font-weight: var(--font-medium);
 
       .close {
         position: absolute;
-        width: fit-content;
         top: 12px;
         right: 12px;
       }
     }
 
-    .form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 36px;
-
-      label {
-        width: 100%;
-
-        input {
-          font-size: var(--sz-md);
-          line-height: var(--lnh-md);
-        }
-      }
+    .body {
+      font-size: var(--sz-md);
+      line-height: var(--lnh-md);
+      text-align: justify;
     }
   }
 }
