--- a/src/widgets/navbar/styles.module.scss
+++ b/src/widgets/navbar/styles.module.scss
@@ -41,7 +41,7 @@
           gap: 12px;
 
           &.logout {
-            color: red;
+            color: rgb(var(--clr-type-red));
           }
         }
       }
