--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -59,6 +59,7 @@
   --w-navbar-expanded: 268px;
   --w-login-form: 400px;
   --w-modal: 550px;
+  --w-skeleton: 55%;
 
   --h-max-modal: calc(100vh - 10%);
 
