--- a/src/widgets/navbar/styles.module.scss
+++ b/src/widgets/navbar/styles.module.scss
@@ -20,7 +20,7 @@
       border-bottom: var(--border-secondary);
 
       .logo {
-        font-size: var(--sz-logo);
+        font-size: var(--sz-md);
         line-height: var(--lnh-md);
         font-weight: var(--font-bold);
       }
