--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -57,6 +57,7 @@
   --p-icon-md: 10px;
   --p-icon-lg: 12px;
   --p-top-main: 60px;
+  --p-top-main-mobile: 100px;
 
   --w-navbar: 68px;
   --w-navbar-expanded: 268px;
