--- a/src/processes/app-container/styles.module.scss
+++ b/src/processes/app-container/styles.module.scss
@@ -7,12 +7,16 @@
     min-height: 100vh;
     padding-left: 68px;
 
-    &.expanded {
-      padding-left: calc(var(--w-navbar-expanded) + 1px);
+    @media (max-width: 768px) {
+      padding-left: 0;
     }
 
-    &:first-child {
+    &.expanded {
+      padding-left: calc(var(--w-navbar-expanded) + 1px);
 
+      @media (max-width: 768px) {
+        padding-left: 0;
+      }
     }
   }
 }
