feat: add temporary dev api funcitons, changed input and scrollbar styles

--- a/src/_pages/history-details/ui/page/styles.module.scss
+++ b/src/_pages/history-details/ui/page/styles.module.scss
@@ -1,5 +1,14 @@
 .container {
-  padding-top: var(--p-top-main);
+  margin-top: var(--p-top-main);
+
+  @media (max-width: 508px) {
+    margin-top: var(--p-top-main-mobile);
+    margin-bottom: var(--p-top-main);
+  }
+
+  @media (max-width: 263px) {
+    margin-top: var(--p-top-main-mobile-tiny);
+  }
 
   .content {
     display: flex;
@@ -21,8 +30,14 @@
 
     .info {
       display: flex;
-      align-items: center;
-      gap: 52px;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 12px;
+
+      div {
+        min-width: fit-content;
+        flex: 1;
+      }
     }
   }
 }
