--- a/src/shared/ui/table-after-change/styles.module.scss
+++ b/src/shared/ui/table-after-change/styles.module.scss
@@ -4,6 +4,7 @@
   border-collapse: collapse;
   border-spacing: 0;
   table-layout: fixed;
+  padding: 0 20px;
 
   .thead {
     background-color: rgb(var(--clr-bg-thead));
@@ -11,6 +12,11 @@
     font-size: var(--sz-md);
     line-height: var(--lnh-md);
     border-bottom: var(--border-secondary);
+
+    @media (max-width: 640px) {
+      font-size: var(--sz-sm);
+      line-height: var(--lnh-sm);
+    }
 
     .th {
       font-weight: var(--font-medium);
@@ -23,8 +29,14 @@
     font-size: var(--sz-md);
     line-height: var(--lnh-md);
 
+    @media (max-width: 640px) {
+      font-size: var(--sz-sm);
+      line-height: var(--lnh-sm);
+    }
+
 
     .tr {
+      cursor: pointer;
       border-bottom: var(--border-secondary);
       transition: var(--transition-default);
 
@@ -38,6 +50,11 @@
 
       .td {
         padding: 16px 0;
+
+        .skeleton {
+          width: var(--w-skeleton);
+          height: var(--lnh-md);
+        }
       }
     }
   }
