--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -59,6 +59,7 @@
   --p-icon-md: 10px;
   --p-icon-lg: 12px;
   --p-top-main: 60px;
+  --p-bottom-main: 72px;
   --p-top-main-mobile: 108px;
   --p-top-main-mobile-tiny: 160px;
 
