--- a/src/_pages/main/ui/page/styles.module.scss
+++ b/src/_pages/main/ui/page/styles.module.scss
@@ -3,7 +3,7 @@
 
   @media (max-width: 508px) {
     margin-top: var(--p-top-main-mobile);
-    margin-bottom: var(--p-top-main);
+    margin-bottom: var(--p-bottom-main);
   }
 
   @media (max-width: 263px) {
