--- a/src/shared/ui/input/styles.module.scss
+++ b/src/shared/ui/input/styles.module.scss
@@ -4,6 +4,11 @@
   border-radius: var(--r-sm);
   border: var(--border-secondary);
 
+  &.loading {
+    color: rgb(var(--clr-type-gray));
+    cursor: not-allowed;
+  }
+
   &:active, &:focus {
     border-color: rgb(var(--clr-primary));
   }
