--- a/src/features/update-product-modal/ui/styles.module.scss
+++ b/src/features/update-product-modal/ui/styles.module.scss
@@ -13,7 +13,7 @@
 
   .content {
     position: relative;
-    max-width: var(--w-modal);
+    width: var(--w-modal);
     background-color: rgb(var(--clr-bg-secondary));
     padding: 20px;
     border: var(--border-secondary);
