--- a/src/app/styles/reset/globals.scss
+++ b/src/app/styles/reset/globals.scss
@@ -1,3 +1,13 @@
 input, textarea {
   outline: none;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number]{
+  -moz-appearance: textfield;
+}
